--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shree-guru-mess",
+  "name": "matha-shree-annapoorneswari-mess",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
